crates/llvmkit-ir/tests/compile_fail/retained_open_indirectbr_cannot_add_after_finish.stderr
error[E0277]: the trait bound `llvmkit_ir::Argument<'_, Brand<'_>>: IntoPointerValue<'_, Brand<'_>>` is not satisfied
  --> tests/compile_fail/retained_open_indirectbr_cannot_add_after_finish.rs:19:49
   |
19 |         let (_sealed, ibr) = b.build_indirectbr(addr, "").unwrap();
   |                                ---------------- ^^^^ the trait `IntoPointerValue<'_, Brand<'_>>` is not implemented for `llvmkit_ir::Argument<'_, Brand<'_>>`
   |                                |
   |                                required by a bound introduced by this call
   |
help: the following other types implement trait `IntoPointerValue<'ctx, B>`
  --> src/value.rs
   |
   |   impl<'ctx, B: ModuleBrand + 'ctx> IntoPointerValue<'ctx, B> for PointerValue<'ctx, B> {
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `PointerValue<'ctx, B>`
...
   |   impl<'ctx, B: ModuleBrand + 'ctx> IntoPointerValue<'ctx, B> for ConstantPointerNull<'ctx, B> {
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ConstantPointerNull<'ctx, B>`
   |
  ::: src/typed_pointer_value.rs
   |
   | / impl<'ctx, T: IrField, B: ModuleBrand + 'ctx> IntoPointerValue<'ctx, B>
   | |     for TypedPointerValue<'ctx, T, B>
   | |_____________________________________^ `TypedPointerValue<'ctx, T, B>`
note: required by a bound in `IRBuilder::<'m, 'ctx, B, F, Positioned, R>::build_indirectbr`
  --> src/ir_builder.rs
   |
   |     pub fn build_indirectbr<A, Name>(
   |            ---------------- required by a bound in this associated function
...
   |         A: IntoPointerValue<'ctx, B>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `IRBuilder::<'m, 'ctx, B, F, Positioned, R>::build_indirectbr`
